edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents data about the last control the driver was subject to.
//
// Corresponds to the `CardControlActivityDataRecord` data type from EF_Control_Activity_Data.
// See Data Dictionary, Section 2.15.
message ControlActivityData {
  // See Data Dictionary, Section 2.53 for `ControlType`.
  bytes control_type = 1;

  // Date and time of the control. See DD Section 2.162 for `TimeReal`.
  google.protobuf.Timestamp control_time = 2;

  // Card number of the control officer. See DD Section 2.73 for `FullCardNumber`.
  string control_card_number = 3;

  // Nation of the vehicle's registration. See DD Section 2.166.
  string vehicle_registration_nation = 4;

  // Vehicle's registration number. See DD Section 2.166.
  string vehicle_registration_number = 5;

  // Start of the downloaded period. See DD Section 2.162 for `TimeReal`.
  google.protobuf.Timestamp control_download_period_begin = 6;

  // End of the downloaded period. See DD Section 2.162 for `TimeReal`.
  google.protobuf.Timestamp control_download_period_end = 7;
}
